syntax = "proto3";

package ch.ubique.notifyme.sdk.backend.model;
option java_package = "ch.ubique.notifyme.sdk.backend.model";

message QRCodeContent {
  string name = 1;
  string location = 2;
  string room = 3;
  enum VenueType {
    OTHER = 0;
    MEETING_ROOM = 1;
    CAFETERIA = 2;
    PRIVATE_EVENT = 3;
    CANTEEN = 4;
    LIBRARY = 5;
    LECTURE_ROOM = 6;
    SHOP = 7;
    GYM = 8;
    KITCHEN_AREA = 9;
    OFFICE_SPACE = 10;
  }
  VenueType venueType = 4;
  bytes notificationKey = 5;
  uint64 validFrom = 6;
  uint64 validTo = 7;
}